# X-Detector

./: README.md  demo_xdet_v4.py  eval_xdet_v4.py  eval_xdet_v5.py  imagenet_main.py  light_head_rfcn_eval.py  light_head_rfcn_train.py  light_head_simple_demo.py  test.py  test_gpu.py  test_pipeline.py  train_test.sh  voc_eval.py  xdet_resnet_eval.py  xdet_resnet_train.py  xdet_v2_resnet_eval.py  xdet_v2_resnet_train.py  xdet_v3_resnet_eval.py  xdet_v3_resnet_train.py  xdet_v4_resnet_train.py  xdet_v5_resnet_train.py
cpp/PSROIPooling/: CMakeLists.txt  PSROIPooling.rar  common.cc  common.h  ps_roi_align_grad_op.cc  ps_roi_align_grad_op.cu  ps_roi_align_op.cc  ps_roi_align_op.cu  ps_roi_align_op.h  ps_roi_pooling_grad_op.cc  ps_roi_pooling_grad_op.cu  ps_roi_pooling_op.cc  ps_roi_pooling_op.cu  ps_roi_pooling_op.h  rotated_ps_roi_align_grad_op.cc  rotated_ps_roi_align_grad_op.cu  rotated_ps_roi_align_op.cc  rotated_ps_roi_align_op.cu  rotated_ps_roi_align_op.h  test_op.py
cpp/PSROIPooling/reference/: bias_op.cc
cpp/roi_pooling_layer/: CMakeLists.txt  roi_pooling_op.cc  roi_pooling_op.py  roi_pooling_op_gpu.cu  roi_pooling_op_gpu.h  roi_pooling_op_test.py
dataset/: coco.py  coco_2017.py  convert_coco_to_tfrecords.py  convert_pascalvoc_to_tfrecords.py  dataset_common.py  dataset_factory.py  dataset_utils.py  pascalvoc_2007.py  pascalvoc_2007_2012.py  pascalvoc_2012.py  simple_pascalvoc_2007_2012.py  voc_eval.py
net/: depth_conv2d.py  dilated_resnet_model.py  resnet_v2.py  slim_resnet_utils.py  xception_body.py  xdet_body.py  xdet_body_v2.py  xdet_body_v3.py  xdet_body_v4.py  xdet_body_v5.py
preprocessing/: anchor_manipulator.py  anchor_manipulator_v2.py  common_preprocessing.py  preprocessing_factory.py  tf_image.py
utility/: draw_toolbox.py  eval_helper.py  metrics.py  train_helper.py
xception_tf/: keras2ir.py  keras_xception.py  test_tf_xception.py  tf_xception.py  tf_xception_.py
